refactor: do cleanup, improve code and use Java 8+ features when applicable
- Simplify conditional logic and return statements
- Use enhanced switch statements where applicable
- Utilize Java 8+ features like Optional and streams
- Remove unnecessary else clauses
- Optimize imports
- Replace deprecated APIs with suggested modern equivalents
- Other refactoring and cleanups